# MLOps-Loan-Default-Classifier

./: .env  app.py  main.py  params.json  pyproject.toml  requirements.txt
data/bronze/: bronze.parquet
data/gold/: test.parquet  train.parquet
data/silver/: silver.parquet
src/import_data/: import_data_cli.py
src/import_data/import_functions/: credit_risk_loader.py  load_params.py
src/preprocess_data/: feature_engineering_cli.py
src/preprocess_data/preprocessing_functions/: config.py  steps.py
src/train_test_splitter/: splitter_cli.py
src/train_test_splitter/splitter_functions/: config.py  splitter.py
